<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <!-- Logo and Title -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/frontPageLogo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/app_logo"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_logo_description" />

        <TextView
            android:id="@+id/frontPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_page_title"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <!-- Input Fields and Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Username Input -->
        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/username_input_hint"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:maxLines="1" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:maxLines="1" />



        <!-- Login Button -->
        <Button
            android:id="@+id/frontPageLoginButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:onClick="onLoginButtonClicked"
            android:padding="8dp"
            android:text="@string/front_page_login_button"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- New Here? Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here_text"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/frontPageSignUpButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:onClick="onSignUpButtonClicked"
            android:padding="8dp"
            android:text="@string/front_page_signup_button"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>